# termex

./: .travis.yml  Cargo.toml  README.md  rustfmt.toml
ci/: before_deploy.sh  install.sh  script.sh
scripts/: exec.sh  install.sh  setup.sh  sync.sh
termex_api/: Cargo.toml
termex_api/src/: blob.rs  endpoint.rs  key.rs  lib.rs  vault.rs
termex_cli/: Cargo.toml
termex_cli/src/: login.rs  main.rs  signup.rs
termex_import/: Cargo.toml
termex_import/src/: history.rs  main.rs  select.rs
termex_sync/: Cargo.toml
termex_sync/src/: main.rs
