[package]
name = "termex_cli"
version = "0.1.0"
authors = ["sourcepirate <sathyanarrayanan@yandex.com>"]

[dependencies]
termex_api = {path = "../termex_api"}
docopt = "1.0.0"
serde = "1.0.70"
serde_derive = "1.0.70"
rpassword = "2.0.0"
base64 = "0.9.2"
log = "0.4.4"
env_logger = "0.5.12"

[dev-dependencies]
cargo-deb = "1.11.0"
cargo-rpm = "0.2.0"

[package.metadata.deb]
maintainer = "Sathya Narrayanan Balaji <sathyanarrayanan@yandex.com>"
copyright = "2018-2019, Sathya Narrayanan Balaji"
section = "admin"
priority = "optional"
assets = [["target/release/termex_cli", "usr/local/bin/", "755"]]